--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,50 @@ body {
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+table {
+    width: 100%;
+}
+
+th {
+    background-color: #f2f2f2;
+    font-weight: bold;
+    text-align: left;
+    padding: 10px 20px;
+    border: 1px solid #ddd;
+}
+
+td {
+    text-align: left;
+    padding: 10px 20px;
+    border: 1px solid #ddd;
+}
+tr:hover {
+    cursor: pointer;
+    background-color: #f2f2f2;
+}
+
+td input[type='checkbox'] {
+    margin-left: 10px;
+}
+
+.actions {
+    display: flex;
+    gap: 5px;
+}
+
+.actions button {
+    padding: 5px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.actions button:nth-child(1) {
+    background-color: #48bb78;
+    color: white;
+}
+
+.actions button:nth-child(2) {
+    background-color: #f56565;
+    color: white;
+}
